--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.12",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.0",
+    "eas-cli": "^3.5.2",
     "expo": "~47.0.9",
     "expo-font": "~11.0.1",
     "expo-splash-screen": "^0.17.5",
